[project @ 2007-09-26 19:24:12 by rlubke]  - Port changes for issue 641 from JSF_1_2X_ROLLING branch.
M src/javax/faces/convert/NumberConverter.java
M src/javax/faces/validator/DoubleRangeValidator.java
M src/javax/faces/validator/LengthValidator.java
M src/javax/faces/validator/LongRangeValidator.java
 - remove scheme leveraging ivar to determine whether or not
   a primitive property has been set or not.

Original author: rlubke
Date: 2007-09-26 19:24:13+00:00

git-svn-id: https://svn.java.net/svn/mojarra~svn/trunk@4516 761efcf2-d34d-6b61-9145-99dcacc3edf1